<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/footer_height"
    android:background="@color/black"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/footer_buttonHome"
        style="@style/HDFooterButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_home_bg"
        android:text="@string/home_text" />

    <Button
        android:id="@+id/footer_buttonProfile"
        style="@style/HDFooterButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_profile_bg"
        android:text="@string/profile_text" />

    <Button
        android:id="@+id/footer_buttonFavorite"
        style="@style/HDFooterButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_fav_bg"
        android:text="@string/favorite_text" />

    <Button
        android:id="@+id/footer_buttonUpdate"
        style="@style/HDFooterButton"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@drawable/ic_update_bg"
        android:text="@string/update_text" />

</LinearLayout>