<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/harley_logo" />

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image_view"
        android:orientation="vertical" >

        <View
            android:id="@+id/view_first"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/module_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/my_profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view_second"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleLayout"
        android:layout_above="@id/layoutFooterBar"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/add_hoto_btn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo_btn" />

            <EditText
                android:id="@+id/username_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_btn_bg"
                android:hint="@string/username"
                android:inputType="textCapWords"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/model_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_btn_bg"
                android:enabled="false"
                android:hint="@string/street_job"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/model_number_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_btn_bg"
                android:enabled="false"
                android:hint="@string/unique_number"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/select_chapter_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gray_btn_bg"
                android:drawableRight="@drawable/navigation_expand"
                android:hint="@string/select_chapter"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fellow_riders"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/avatar_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/gray_btn_bg"
                android:hint="@string/avatar_name"
                android:inputType="textCapWords"
                android:maxLength="16"
                android:paddingLeft="10dp"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/update_user_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/orange_btn_bg"
                android:paddingLeft="10dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <com.hdesign.ui.FooterBar
        android:id="@+id/layoutFooterBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true" />

</RelativeLayout>