<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/welcome_bg" >

        <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:contentDescription="@null"
            android:src="@drawable/harley_logo" />

        <ImageView
            android:id="@+id/welcome_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo_image_view"
            android:layout_marginTop="10dp"
            android:contentDescription="@null"
            android:src="@drawable/welcome_text" />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_image_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/username"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/layout_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_profile_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/edit_profile_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/orange_btn_bg"
                android:gravity="center"
                android:text="@string/edit_profile"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/sync_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/syn_profile"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/sync_profile"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/facebook_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/facebook_btn"
                android:gravity="center" />

            <Button
                android:id="@+id/twitter_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/twitter_btn"
                android:gravity="center" />

            <Button
                android:id="@+id/google_btn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/google_plus_btn"
                android:gravity="center" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>